# regzamples

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.config/: hakari.toml
crates/mcdld/: Cargo.toml
crates/mcdld/src/: lib.rs
crates/mcdld/src/api/: mod.rs  path.rs
crates/test1/: Cargo.toml
libs/dummy_lib/: Cargo.toml
libs/dummy_lib/src/: main.rs
workspace-hack/: Cargo.toml
