[workspace]
members = [
    "crates/*",
    
    # "libs/*", 
    "workspace-hack"
    ]
resolver = "2"
version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.metadata.cyclonedx]
included_dependencies = "all"

[workspace.dependencies]
