[workspace]
members = [
    "crates/*",
    "libs/dummy_lib",
    "workspace-hack",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace.metadata.cyclonedx]
included_dependencies = "all"

[workspace.dependencies]
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["matched-path", "headers", "macros"] }
axum-client-ip = "0.4.1"
axum-extra = "0.8.0"
backtrace = "0.3.69"
chrono = "0.4.30"
clap = { version = "4.4.3", features = ["env", "derive"] }
ctor = "0.2.4"
dotenvy = "0.15.7"
eyre = "0.6.8"
futures = "0.3.29"
futures-core = "0.3.29"
futures-util = "0.3.29"
hyper = "0.14.26"
hyper-rustls = "0.24.0"
indenter = "0.3.3"
jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
mime = "0.3.17"
once_cell = "1.17.1"
rand = "0.8.5"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls-webpki-roots","stream"] }
reqwest-middleware = "0.2.3"
rustls = "0.21.2"
rustls-native-certs = "0.6.3"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.188", features = ["alloc", "derive", "rc"] }
serde_json = { version = "1.0.105", features = ["alloc", "raw_value"] }
serde_path_to_error = "0.1.14"
serde_urlencoded = "0.7.1"
serde_with = { version = "3.3.0", features = ["json"] }
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "parking_lot",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
ureq = { version = "2.7.1", features = ["json", "tls"] }
uuid = { version = "1.4.1", features = ["v4"] }
